--- a/views/landing/index.hbs
+++ b/views/landing/index.hbs
@@ -1,6 +1,6 @@
-{{#extends 'base'}}
+{{#extends "base"}}
 
-{{#block 'content'}}
+{{#block "content"}}
     <h1>Welcome!</h1>
     <h1>Start Managing your Posters</h1>
     <table class="table">
@@ -13,7 +13,9 @@
                 <th>Date</th>
                 <th>Stock</th>
                 <th>Height</th>
-                <th>Width</th>  
+                <th>Width</th>
+                <th>Media Property</th>
+                <th>Artists</th>
                 <th></th>
             </tr>
         </thead>
@@ -28,6 +30,11 @@
                 <td>{{this.stock}}</td>
                 <td>{{this.height}}</td>
                 <td>{{this.width}}</td>
+                <td>{{this.property.name}}</td>
+                <td>
+                    {{#each this.artists}}
+                        <span class="badge bg-secondary">{{this.name}}</span>
+                    {{/each}}</td>
                 <td>
                     <a href="/posters/{{this.id}}/update" class="btn btn-primary btn-sm">Update</a>
                     <a href="/posters/{{this.id}}/delete" class="btn btn-danger btn-sm">Delete</a>
