--- a/views/posters/index.hbs
+++ b/views/posters/index.hbs
@@ -13,6 +13,8 @@
             <th>Stock</th>
             <th>Height</th>
             <th>Width</th>  
+            <th>Media Property</th>  
+            <th>Artists</th>
             <th></th>
         </tr>
     </thead>
@@ -27,6 +29,12 @@
             <td>{{this.stock}}</td>
             <td>{{this.height}}</td>
             <td>{{this.width}}</td>
+            <td>{{this.property.name}}</td>
+            <td>
+                {{#each this.artists}}
+                    <span class="badge bg-secondary">{{this.name}}</span>
+                {{/each}}</td>
+            <td>
             <td>
                 <a href="/posters/{{this.id}}/update" class="btn btn-primary btn-sm">Update</a>
                 <a href="/posters/{{this.id}}/delete" class="btn btn-danger btn-sm">Delete</a>
