recovered from gitpod wiping of database transiting to paid account

--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -51,7 +51,7 @@
                     {{#if user}}
                         Welcome back, <a href="/user/profile">{{user.name}}</a>
                         <a href="/user/logout" class="ml-3 btn btn-primary btn-sm">Logout</a>
-                    {{#else}}
+                    {{else}}
                         Hello, new user
                         <a href="/user/login" class="ml-3 btn btn-primary btn-sm">Login</a>
                     {{/if}}
