--- a/views/posters/create.hbs
+++ b/views/posters/create.hbs
@@ -4,6 +4,7 @@
 
 <h1> Create new poster </h1>
 <form method="POST">
+<input type="hidden" name="_csrf" value="{{csrfToken}}"/>
 {{{form}}}
 <input type="submit" class="mt-3 btn btn-danger"/>
 </form>
