--- a/views/posters/index.hbs
+++ b/views/posters/index.hbs
@@ -2,6 +2,7 @@
 
 {{#block "content"}}
 <h1>All Posters</h1>
+<input type="hidden" name="_csrf" value="{{csrfToken}}"/>
 <table class="table">
     <thead>
         <tr>
