--- a/views/posters/update.hbs
+++ b/views/posters/update.hbs
@@ -3,6 +3,7 @@
 
 <h1> Update Poster </h1>
 <form method="POST">
+<input type="hidden" name="_csrf" value="{{csrfToken}}"/>
     {{{form}}}
 <input type="submit" class="mt-3 btn btn-danger"/>
 </form>
