--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -2,6 +2,7 @@
 {{#block 'content'}}
     <h1> Login </h1>
     <form method="POST">
+        <input type="hidden" name="_csrf" value="{{csrfToken}}"/>
         {{{userForm}}}
         <input type="submit" class="btn btn-primary mt-3"/>
     </form>
