completed search form, pending debugging of search functionalities in posters routes

--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -45,6 +45,10 @@
                     </li>
                           <li class="nav-item mr-2">
                         <a class="nav-link" href="/user/login">Login</a>
+                    </li>
+                    </li>
+                          <li class="nav-item mr-2">
+                        <a class="nav-link" href="/posters/search">Search</a>
                     </li>                    
                 </ul>
                 <div>
