completed DAL, service layer, router, and shopping cart relational schema

--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -54,6 +54,7 @@
                 <div>
                     {{#if user}}
                         Welcome back, <a href="/user/profile">{{user.name}}</a>
+                        <a href="/cart" class="ml-3 btn btn-success btn-sm">Cart</a>
                         <a href="/user/logout" class="ml-3 btn btn-primary btn-sm">Logout</a>
                     {{else}}
                         Hello, new user
