completed stripe developer test implementation for customer sending and website receiving payment

--- a/views/cart/index.hbs
+++ b/views/cart/index.hbs
@@ -2,6 +2,7 @@
 {{#block 'content'}}
 
     <h1> Items In Your Cart </h1>
+    <a href="/checkout" class="btn btn-success mb-3 btn-md"> Cart Checkout </a>
     <div class="list-group">
         {{#each itemsInCart}}
         <div class="list-group-item">
